# utility-explorer

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
ue/: __init__.py  cli.py  config.py  dashboard.py  db.py  focus.py  google_auth.py
ue/activity/: __init__.py  git.py  manual.py
ue/commands/: block.py  demo.py  git_cmd.py  log.py  review.py  routines.py  sync.py  task.py  workstream.py
ue/inbox/: __init__.py  calendar.py  gmail.py
ue/utils/: analysis.py  dates.py  display.py
